idea/testData/checker/Properties.jet
val <error descr="Specify either type or value">foo</error>

